--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>568</width>
-    <height>675</height>
+    <width>559</width>
+    <height>710</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -24,16 +24,31 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
-    <item>
+   <layout class="QGridLayout" name="gridLayout" columnstretch="0,0">
+    <property name="sizeConstraint">
+     <enum>QLayout::SetDefaultConstraint</enum>
+    </property>
+    <property name="bottomMargin">
+     <number>3</number>
+    </property>
+    <property name="verticalSpacing">
+     <number>3</number>
+    </property>
+    <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="spacing">
+       <number>4</number>
+      </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
+        <property name="spacing">
+         <number>3</number>
+        </property>
         <item>
          <widget class="PlotWidget" name="plotX">
           <property name="enabled">
@@ -42,19 +57,19 @@
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
-            <verstretch>1</verstretch>
+            <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>16</height>
+            <height>1</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>128</height>
+            <height>175</height>
            </size>
           </property>
           <property name="toolTip">
@@ -85,19 +100,19 @@
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
-            <verstretch>1</verstretch>
+            <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>16</height>
+            <height>1</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>128</height>
+            <height>175</height>
            </size>
           </property>
           <property name="toolTip">
@@ -124,7 +139,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>32</height>
+          <height>1</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>450</height>
          </size>
         </property>
         <property name="toolTip">
@@ -143,7 +164,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>32</height>
+          <height>1</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>450</height>
          </size>
         </property>
         <property name="toolTip">
@@ -300,7 +327,7 @@
       </item>
      </layout>
     </item>
-    <item>
+    <item row="0" column="1">
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="ControlWidget" name="controlWidgetX" native="true">
@@ -313,7 +340,7 @@
         <property name="minimumSize">
          <size>
           <width>10</width>
-          <height>20</height>
+          <height>0</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -332,7 +359,7 @@
         <property name="minimumSize">
          <size>
           <width>10</width>
-          <height>20</height>
+          <height>0</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -351,8 +378,11 @@
         <property name="minimumSize">
          <size>
           <width>10</width>
-          <height>20</height>
+          <height>0</height>
          </size>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -365,7 +395,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>568</width>
+     <width>559</width>
      <height>30</height>
     </rect>
    </property>
